[tool.poetry]
name = "valutatrade-hub"
version = "0.2.0"
description = "Простая файловая база данных с консольным интерфейсом для образовательных целей."
authors = ["Solovyev Sergey"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub"},
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trade = "valutatrade_hub.cli.interface:cli"

[tool.poetry.dependencies]
python = ">=3.11"
prettytable = "^3.16.0"
click = "^8.3.1"
toml = "^0.10.2"
requests = "^2.32.5"
dotenv = "^0.9.9"
python-dotenv = "^1.2.1"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[tool.valutatrade]
data_path = "data"
users_file = "users.json"
portfolios_file = "portfolios.json"
rates_file = "rates.json"
rates_ttl_seconds = 300  # 5 минут
default_base_currency = "USD"
log_path = "logs"
log_file = "actions.log"
log_format = "%(asctime)s - %(levelname)s - %(message)s"